// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accRating": 15.225,
  "accuracyPct": 8.225,
  "atk": 63,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 10.25,
  "critMult": 1.5550299513149461,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 148,
  "evaRating": 19.200000000000003,
  "evasionPct": 19.200000000000003,
  "extraAttackChancePct": 146,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 55,
  "magicAtk": 50,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 292,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accRating": 8.775,
  "accuracyPct": 1.775,
  "atk": 11,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.4604255649461715,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 15,
  "healMult": 1.1500000000000001,
  "hp": 190,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 8,
  "magicDef": 7,
  "maxHp": 190,
  "maxMp": 92,
  "minDamage": 3,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accRating": 11.684999999999999,
  "accuracyPct": 4.685,
  "atk": 19,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.45280302180028,
  "critResistPct": 4.5,
  "def": 6,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 14,
  "healMult": 1.33,
  "hp": 640,
  "intStat": 148,
  "lukStat": 15,
  "magicAtk": 47,
  "magicDef": 14,
  "maxHp": 640,
  "maxMp": 501,
  "minDamage": 9,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": true,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 28,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accRating": 10.825,
  "accuracyPct": 3.8249999999999997,
  "atk": 30,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 20.25,
  "critMult": 1.7329671756295133,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 60,
  "evaRating": 16.8,
  "evasionPct": 16.8,
  "extraAttackChancePct": 59,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 135,
  "magicAtk": 24,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 118,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accRating": 9.175,
  "accuracyPct": 2.175,
  "atk": 38,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.4755190439471157,
  "critResistPct": 1.5,
  "def": 30,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 12.5,
  "healMult": 1.7700000000000002,
  "hp": 835,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 8,
  "magicDef": 7,
  "maxHp": 835,
  "maxMp": 227,
  "minDamage": 10,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 25,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accRating": 11.235,
  "accuracyPct": 4.234999999999999,
  "atk": 55,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.5501420281376743,
  "critResistPct": 1.5,
  "def": 18,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 9.5,
  "healMult": 1.31,
  "hp": 720,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 27,
  "magicDef": 7,
  "maxHp": 720,
  "maxMp": 227,
  "minDamage": 17,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 19,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "781e33ad365b19c2b6a0f4f8955dccf40d89fd2d",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 6,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "7a39c83de6ff61d3344cc0e519db7938fcbedd39",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 15,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "411629ec416fe329677e3857c56cc5b4665a41a2",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 227,
    "turns": 36,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "659e1d0de39e7e59490829150657aefdbc39e60c",
    "outcome": "win",
    "playerHp": 635,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "e5d72d0394cf82de1e61abe59cdc08f0384caed7",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 501,
    "turns": 35,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "bbe60afb612896d27de210be002499d998dce94a",
    "outcome": "win",
    "playerHp": 820,
    "playerMp": 227,
    "turns": 47,
  },
  {
    "enemyHp": 0,
    "label": "heal_vs_들소_boss",
    "logSha": "220c96404ddde447cd28a43b2382b209eb9e064e",
    "outcome": "win",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 57,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "fd1b94605ec2841853c425f23d1783ca40af1a1d",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 501,
    "turns": 18,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "769b5463a69dcbaf09c1271cc38edc60125470b4",
    "outcome": "win",
    "playerHp": 190,
    "playerMp": 92,
    "turns": 18,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "397ff228d5759a843575e3fed769a145cdffb944",
    "outcome": "p1_win",
    "turns": 61,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "395f655058f37694c5de02cda7aee2595757df3f",
    "outcome": "p1_win",
    "turns": 39,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "dd740aadbe8e1cc49cf052eea34a9018ab8e454d",
    "outcome": "p2_win",
    "turns": 137,
  },
]
`;

exports[`골든: 적 페이즈 메커닉 커버리지 (리팩터 가드) > 적 페이즈 메커닉 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "enemy_dot_tick",
    "logSha": "8c3116d48b1a908ff910a87bce1e7fb7b46eb543",
    "outcome": "win",
    "playerHp": 717,
    "playerMp": 227,
    "turns": 17,
  },
  {
    "enemyHp": 0,
    "label": "chill_enemy",
    "logSha": "ae6fc147a0d11370b44a5372257e3abb6550c4cf",
    "outcome": "win",
    "playerHp": 821,
    "playerMp": 227,
    "turns": 25,
  },
  {
    "enemyHp": 0,
    "label": "thorns_reflect",
    "logSha": "ad17a4643696f2e729aa1df559a0cc5674fca932",
    "outcome": "win",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 26,
  },
  {
    "enemyHp": 0,
    "label": "evade_reflect",
    "logSha": "698b28b09e51b1982397c3e4420cc70bcf564b98",
    "outcome": "win",
    "playerHp": 625,
    "playerMp": 227,
    "turns": 56,
  },
  {
    "enemyHp": 0,
    "label": "enrage_enemy",
    "logSha": "d93e1870a46bd6f3ed48a3eee939b3dc3cfd93c4",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 19,
  },
  {
    "enemyHp": 0,
    "label": "brace_enemy",
    "logSha": "c93e131d0885df06de6952e327497a9548601bf6",
    "outcome": "win",
    "playerHp": 714,
    "playerMp": 227,
    "turns": 19,
  },
  {
    "enemyHp": 0,
    "label": "heavyblow_enemy",
    "logSha": "8651b08cffbd4ae42821b00475fa8faaff8413a4",
    "outcome": "win",
    "playerHp": 820,
    "playerMp": 227,
    "turns": 55,
  },
]
`;
